[package]
name = "aitools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
dialoguer = "0.11.0"
tree-sitter = "0.23.0"
tree-sitter-typescript = "0.21.2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
walkdir = "2.5.0"
colored = "2.1.0"
indicatif = "0.17.8"
log = "0.4.22"
crossterm = "0.28.1"
tempfile = "3.2"

[dev-dependencies]
tempfile = "3.2"
